src/sfdc/force-app/main/default/objects/B2C_Commerce_ProcessCustomerDetails__e/fields/B2C_CustomerList_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList_ID__c</fullName>
    <description>... represents the parent CustomerList for the defined Contact and B2C Customer Profile.</description>
    <label>B2C CustomerList ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>