src/sfdc/force-app/main/default/objects/B2C_Commerce_ProcessCustomerDetails__e/fields/B2C_Profile_Publish_JSON__c.field-meta.xml
<CustomField>
    <fullName>B2C_Profile_Publish_JSON__c</fullName>
    <description>... represents the B2C Profile Publish JSON that should override calculating the Profile JSON at runtime.</description>
    <label>B2C Profile Publish JSON</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>