src/sfdc/force-app/main/default/objects/B2C_Commerce_ProcessCustomerDetails__e/fields/CRM_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Contact_ID__c</fullName>
    <description>... represents the internal CRM Contact ID for a given B2C Commerce Customer record.</description>
    <label>CRM Contact ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>