src/sfdc/force-app/main/default/objects/B2C_Commerce_ProcessCustomerDetails__e/fields/CRM_CustomerList_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_CustomerList_ID__c</fullName>
    <description>... represents the internal Salesforce Platform CustomerList associated to the Contact being processed.</description>
    <label>CRM CustomerList ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>