src/sfdc/force-app/main/default/objects/B2C_Commerce_ProcessCustomerDetails__e/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>... represents the developerName of the Named Credential used to retrieve the B2C Commerce Customer details.</description>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>