src/sfdc/force-app/main/default/objects/B2C_Commerce_ProcessCustomerDetails__e/fields/Process_Mode__c.field-meta.xml
<CustomField>
    <fullName>Process_Mode__c</fullName>
    <defaultValue>&quot;retrieve&quot;</defaultValue>
    <description>... represents the operation / process mode for a given event (accepts either &apos;retrieve&apos; which retrieves details, or &apos;publish&apos; which posts details).</description>
    <label>Process Mode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>